actualizacion proyecto, creacion de usuarios con roles validada y funcional

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
 spring.application.name=sistema-gestion-logistica
+
+# PostgreSQL DataSource Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/AppVial
+spring.datasource.username=admin
+spring.datasource.password= .KairA2025. 
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA/Hibernate Configuration (Ajusta según tus necesidades)
+# 'update': Hibernate intentará actualizar el esquema si hay diferencias con tus entidades.
+# 'validate': Hibernate validará el esquema contra tus entidades y fallará si no coinciden.
+# 'create': Borrará y creará el esquema cada vez que la aplicación inicie (¡cuidado en producción!).
+# 'create-drop': Como 'create', pero también borrará el esquema al cerrar la aplicación.
+# 'none': No hará nada con el esquema.
+spring.jpa.hibernate.ddl-auto=update
+
+# Opcional: Mostrar SQL generado por Hibernate en la consola
+spring.jpa.show-sql=true
+# Opcional: Formatear el SQL mostrado
+spring.jpa.properties.hibernate.format_sql=true
+
+# Opcional: Especificar el dialecto de PostgreSQL (Spring Boot suele autodetectarlo)
+# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
