--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+
 file.upload-dir=./uploads
+#Configuracion de limete de MB para MultipartFile
+
+spring.servlet.multipart.max-file-size=15MB
+spring.servlet.multipart.max-request-size=15MB
+server.tomcat.max-swallow-size=15MB
